[#MOOKBSF-360] [#MOOKBSF-359] Adds a current_user route to get logged in user data. returns a 401 error wrapped in a JSON response to prevent browsers displaying default login box. Default error for unauthorized access is 403, again to prevent browser displaying login box. Adds a route to logout the current user

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -56,6 +56,13 @@ a, a:hover {
   .navbar-brand {
     padding: 10px 10px;
   }
+  .dropdown-menu {
+
+    border : none;
+    > li > a {
+      font-weight: 600;
+    }
+  }
 }
 
 .responsive-embed {
